conf.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  selector: 
    matchLabels:
      app: nnwebserver
  template:
    metadata:
      name: tomcat-nginx-2
      labels:
        app: nnwebserver
    spec:
      containers:
        - name: tomcat
          image: kavana147/tomcat:9
          volumeMounts: 
            - mountPath: /usr/local/tomcat/webapps
              name: tomcat-conf-vol
      volumes: 
        - configMap:
            name: firstconfig
          name: tomcat-conf-vol
