configmap.yml
apiVersion: v1
kind: Pod
metadata: 
  name: tomcat-nginx-2
  labels: 
    app: web-server
spec:
  containers: 
    - name: tomcat
      image: tomcat:9.0
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
