ingress-jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  selector:
    matchLabels:
      app: jenkinswebserver
  template:
    metadata:
      name: jenkins-nginx-2
      labels:
        app: jenkinswebserver
    spec:
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts
          securityContext:
            runAsUser: 0
