namespacepod.yml
apiVersion: v1
kind: Pod
metadata: 
  name: tomcat-nginx
  labels: 
    app: web-server
spec:
  containers: 
    - name: tomcat
      image: tomcat:9.0
      resources:
        limits:
          cpu: "0.5"
          memory: "500Mi"
        requests:
          cpu: "0.5"
          memory: "500Mi"
    - name: nginx
      image: nginx:1.14.2
      resources:
        limits:
          cpu: "0.5"
          memory: "500Mi"
        requests:
          cpu: "0.5"
          memory: "500Mi"
      ports:
        - containerPort: 80
