externalip.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-external
spec:
  externalIPs:     
    - 18.237.204.113 
  selector: 
    app: web-server
  ports: 
    - name: tomcat-port
      protocol: TCP
      port: 8098
      targetPort: 8080
    - name: nginx-port
      protocol: TCP
      port: 8099
      targetPort: 80
