ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-ingress-serv
spec:
  selector: 
    app: nnwebserver
  ports: 
    - name: tomcat-port
      protocol: TCP
      port: 8094
      targetPort: 8080
