loadbal.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-loadbal
spec:
  type: LoadBalancer     
  selector: 
    app: web-server
  ports: 
    - name: tomcat-port
      protocol: TCP
      port: 8094
      targetPort: 8080
    - name: nginx-port
      protocol: TCP
      port: 8096
      targetPort: 80
