nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-nodeport
spec:
  type: NodePort      
  selector: 
    app: web-server
  ports: 
    - name: tomcat-port
      protocol: TCP
      port: 8094
      targetPort: 8080
      nodePort: 30234
    - name: nginx-port
      protocol: TCP
      port: 8096
      targetPort: 80
      nodePort: 30023
