replicaservice.yml
apiVersion: v1
kind: Service
metadata:
  name: replica-service
spec:
  selector: 
    app: nnwebserver
  ports: 
    - name: tomcat-port
      protocol: TCP
      port: 8094
      targetPort: 8080
    - name: nginx-port
      protocol: TCP
      port: 8096
      targetPort: 80
