ingress-jenkins-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins-ingress-serv
                port:
                  number: 8085
